# Cypr

./: README.md
control_brazo/: CMakeLists.txt  package.xml
control_brazo/Escenas/: Evaluable.ttt
control_brazo/include/control_brazo/: arm_controller.hpp
control_brazo/src/: arm_controller.cpp
localization/config/: localization_params.yaml
localization/include/localization/: lse.hpp
localization/scenes/: lse_scene.ttt  pf_scene.ttt
localization/src/: lse.cpp  pf.cpp
motion/include/motion/: controller.hpp  motion_model.hpp  motion_model_noise.hpp
motion/launch/: test.launch
motion/src/: actuator.cpp  controller.cpp  motion_model_noise.cpp
navigation/: package.xml  ros2_pioneer_laser.ttt  ros2_pioneer_laser.tttZone.Identifier
navigation/include/navigation/: reactive.hpp
navigation/src/: reactive.cpp
navigation/srv/: Status.srv
src/keyboard_control/launch/: keyboard_control.launchZone.Identifier
src/keyboard_control/src/: keyboard_control.cppZone.Identifier
src/localization/: CMakeLists.txtZone.Identifier
src/localization/include/localization/: lse.hppZone.Identifier
src/localization/src/: lse.cpp  pf.cpp
src/motion/: CMakeLists.txt  motion_model_noise_scene.ttt  motion_model_noise_scene.tttZone.Identifier  package.xml
src/motion/include/motion/: actuator.hpp
src/motion/src/: main_actuator.cpp  main_controller.cpp  motion_model.cpp  motion_model_noise.cpp
src/navigation/: CMakeLists.txt  package.xml  ros2_pioneer_laser.tttZone.Identifier
src/navigation/include/navigation/: reactive.hpp
src/navigation/src/: reactive.cpp
src/services/: CMakeLists.txt  package.xml
src/services/include/services/: ServerNode.hpp  servernode.hpp
src/services/src/: ClientNode.cpp  ServerNode.cpp  servernode.cpp
src/services/srv/: Get.srv  Set.srv
warrior_13/: CMakeLists.txt  package.xml
warrior_13/docs/: FSM.md  a.mlx  go_to_point.py  point_composition1.py  point_composition2.py  scene_info.md  survival_scene.md
warrior_13/include/warrior_13/: warrior.hpp
warrior_13/launch/: warrior_launch.xml
warrior_13/src/: main_warrior.cpp  warrior.cpp
